Correção do Controller da Api

--- a/Livraria.Common/Resources/Errors.pt-BR.resx
+++ b/Livraria.Common/Resources/Errors.pt-BR.resx
@@ -117,11 +117,20 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AuthorNotFound" xml:space="preserve">
+    <value>Falha ao tentar recuperar o autor solicitado.</value>
+  </data>
   <data name="BookNotFound" xml:space="preserve">
     <value>O livro não foi encontrado.</value>
   </data>
+  <data name="CategoryNotFound" xml:space="preserve">
+    <value>Falha ao tentar recuperar a categoria solicitada.</value>
+  </data>
   <data name="DuplicatedIsbn" xml:space="preserve">
     <value>Já existe um livro cadastrado com este ISBN.</value>
+  </data>
+  <data name="DuplicatedName" xml:space="preserve">
+    <value>O nome informado já existe.</value>
   </data>
   <data name="InformCategory" xml:space="preserve">
     <value>Deve-se informar uma categoria para o livro.</value>
@@ -143,5 +152,8 @@
   </data>
   <data name="InvalidName" xml:space="preserve">
     <value>O nome deve conter de 3 a 150 caractéres.</value>
+  </data>
+  <data name="PublisherNotFound" xml:space="preserve">
+    <value>Falha ao tentar recuperar a editora solicitada.</value>
   </data>
 </root>
