--- a/Livraria.Common/Resources/Msgs.pt-BR.resx
+++ b/Livraria.Common/Resources/Msgs.pt-BR.resx
@@ -118,9 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="SuccessfulyChanges" xml:space="preserve">
-    <value>Data was successfully updated.</value>
+    <value>Os dados foram atualizados com sucesso.</value>
   </data>
   <data name="SuccessfulyDelete" xml:space="preserve">
-    <value>Data was deleted successfully.</value>
+    <value>Os dados foram excluídos com sucesso.</value>
   </data>
 </root>
